# JEDM

./: .gitignore  main.py  pyproject.toml
src/: ground_truth.py  npgc_local.py  standard_metrics.py  synthetic_regression.py
